# myecho.me

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  EXCHANGE.md  README.md  alembic.ini  echo.md  entrypoint.sh  pyproject.toml  thisisme.md
alembic/: env.py
alembic/versions/: 246243d7231a_add_uin_echo_address_keypair_to_users.py  974e9f3ee338_initial_schema.py  ff8c76a8ea42_add_exchange_tables.py
echo/: __init__.py  cache.py  config.py  database.py  main.py
echo/api/: auth.py  auth_dep.py  comments.py  dashboard.py  echo.py  exchange.py  ingest.py  journal.py  profile.py  theme.py  voice.py
echo/engine/: ask.py  assist.py  drift.py  journal.py  resonance.py  themes.py  transcribe.py  voice.py
echo/ingest/: career.py  conversations.py  linkedin.py  pipeline.py  writing.py
echo/models/: __init__.py  exchange.py  ingest.py  journal.py  profile.py  theme.py  user.py
echo/profile/: beliefs.py  compiler.py  fingerprint.py  knowledge.py
echo/static/css/: echo.css  style.css
echo/static/js/: echo-theme.js
echo/templates/: ask.html  base.html  dashboard.html  entry.html  journal.html  timeline.html
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: EchoEditor.tsx  VoiceRecorder.tsx
scripts/: build_echo_profile.py  test_echo_voice.py
tests/: test_auth_dep.py  test_auth_routes.py  test_engine.py  test_ingest.py  test_profile.py
